[package]
name = "board-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allegro = "0.0.44"
allegro-sys = "0.0.44"
allegro_font = "0.0.44"
allegro_image = "0.0.44"
allegro_primitives = "0.0.44"
allegro_ttf = "0.0.44"
clipboard = "0.5.0"
